--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,24 +1,24 @@
-# name: DEPLOYMENT
+name: DEPLOYMENT
 
-# on:
-#   push:
-#     branches: [master]
+on:
+  push:
+    branches: [development]
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     env:
-#       FOLDER_NAME: /Users/fanzru/backend/BE-SISFO-KLINIK/scripts
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Preparing to deploy to production 🚀🤘
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.HOST }}
-#           USERNAME: ${{ secrets.USERNAME }}
-#           PORT: ${{ secrets.PORT }}
-#           PASSWORD: ${{ secrets.PASSWORD }}
-#           script: |
-#             cd ~/backend/BE-SISFO-KLINIK/scripts
-#             chmod +x deploy.sh
-#             ./deploy.sh
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    env:
+      FOLDER_NAME: /Users/fanzru/backend/BE-SISFO-KLINIK/scripts
+    steps:
+      - uses: actions/checkout@v2
+      - name: Preparing to deploy to production 🚀🤘
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          script: |
+            cd ~/backend/BE-SISFO-KLINIK/scripts
+            chmod +x deploy.sh
+            ./deploy.sh
