update scripts to deploy at cloud

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,6 +19,7 @@ jobs:
           PORT: ${{ secrets.PORT }}
           PASSWORD: ${{ secrets.PASSWORD }}
           script: |
+            sudo su
             cd ~/backend/BE-SISFO-KLINIK/scripts
             chmod +x deploy.sh
             ./deploy.sh
